[package]
name = "hello-rust"
authors = ["weykonkong@gmail.com"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2"
rand = "0.4.0"

hello_macro = { path = "./hello_macro" }
hello_macro_derive = { path = "./hello_macro_derive"} 
